a possible overflow fix

--- a/styles/sass/_media-queries.scss
+++ b/styles/sass/_media-queries.scss
@@ -110,3 +110,16 @@
     }
   }
 }
+
+@media screen and (max-width: 450px) {
+
+  @keyframes cloudFloat {
+    0% {
+        transform: translate(0px);
+    }
+    100% {
+        transform: translate(450px);
+        opacity: 0%;
+    }
+  }
+}
